// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть корректные параметры для события просмотра страницы для Метрики 1`] = `
Object {
  "remarketing": Object {
    "cars": Object {
      "pageview": Object {
        "mark": Object {
          "volkswagen": Object {
            "seller": Object {
              "user": Object {},
            },
            "status": Object {
              "used": Object {},
            },
          },
        },
        "model": Object {
          "amarok": Object {
            "seller": Object {
              "user": Object {},
            },
            "status": Object {
              "used": Object {},
            },
          },
        },
      },
    },
  },
}
`;

exports[`должен вернуть корректные параметры для события просмотра телефона для Метрики 1`] = `
Object {
  "remarketing": Object {
    "cars": Object {
      "phoneview": Object {
        "mark": Object {
          "volkswagen": Object {
            "seller": Object {
              "user": Object {},
            },
            "status": Object {
              "used": Object {},
            },
          },
        },
        "model": Object {
          "amarok": Object {
            "seller": Object {
              "user": Object {},
            },
            "status": Object {
              "used": Object {},
            },
          },
        },
      },
    },
  },
}
`;
